--- a/style.css
+++ b/style.css
@@ -11,3 +11,16 @@
 input {
     margin-top: 30px;
 }
+
+#validation-input {
+    border: 3px solid #bdbdbd;
+    outline: none;
+}
+  
+#validation-input.valid {
+    border-color: #4caf50;
+}
+  
+#validation-input.invalid {
+    border-color: #f44336;
+}
